# challenges

my-python-project/: README.md  pyproject.toml  requirements.txt  setup.cfg
my-python-project/auto/: .coverage  .env.example  Dockerfile  PRODUCTION_FEATURES.md  README.md  TESTING_GUIDE.md  app.py  docker-compose.yml  index.html  locustfile.py  orderbook.db  pyproject.toml  pytest.ini  reconstructed_orderbook_1763202290.json  requirements.txt  run_analysis.py  run_client.py
my-python-project/auto/.github/workflows/: ci.yml
my-python-project/auto/.venv2/: pyvenv.cfg
my-python-project/auto/data/: mbo_data.csv
my-python-project/auto/iac/terraform/: main.tf
my-python-project/auto/output/: order_book.json
my-python-project/auto/scripts/: generate_mbo_data.py
my-python-project/auto/src/my_package/: __init__.py  cli.py  config.py  db.py  logging.py  logging_config.py  main.py  mbo_reader.py  metrics.py  orderbook.py  server.py  stream.py  stream_server.py  tcp_server.py
my-python-project/auto/tests/: test_basic.py  test_correctness.py  test_e2e.py  test_high_performance.py  test_integration.py  test_performance.py  test_resilience.py  test_streaming.py
my-python-project/src/my_package/: cli.py  main.py
my-python-project/tests/: test_basic.py  test_hello.py    # create a simple "hello world" pytest (matches existing test naming)
