[tool.poetry]
name = "my-python-project"
version = "0.1.0"
description = "A brief description of my Python project."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
requires-python = ">=3.9"
dependencies = ["fastapi", "uvicorn[standard]", "pydantic", "SQLAlchemy"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]