[metadata]
name = my-python-project
version = 0.1.0
description = A sample Python project
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/my-python-project
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    # List your project dependencies here
    # e.g. requests>=2.25.1

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[options.extras_require]
testing =
    pytest
    pytest-cov