[metadata]
name = my-python-project
version = 0.1.0
description = A sample Python project
author = Santosh bhadoriya
author_email = sandy.bhadoriya@gmail.com
url = https://github.com/sandybhadoriya/challenges
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    # List your project dependencies here
    # e.g. requests>=2.25.1

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[options.extras_require]
testing =
    pytest
    pytest-cov